--- a/css/master.css
+++ b/css/master.css
@@ -1331,6 +1331,9 @@ overflow: hidden;
         background-color: white;
     }
 }
+.plans-page .plan{
+   box-shadow: 0 12px 20px 0 rgb(0 0 0 / 13%), 0 2px 4px 0 rgb(0 0 0 / 12%);
+}
 .plans-page .price{
     position: relative;
     font-size: 40px;
